@@ -744,6 +744,7 @@ VALUE rb_make_backtrace(void);
 void rb_backtrace_print_as_bugreport(void);
 int rb_backtrace_p(VALUE obj);
 VALUE rb_backtrace_to_str_ary(VALUE obj);
+void rb_backtrace_print_to(VALUE output);
 VALUE rb_vm_backtrace_object();
 
 RUBY_SYMBOL_EXPORT_BEGIN
