@@ -1,3 +1,11 @@
+Wed Oct  9 00:55:51 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* load.c (load_lock): display backtrace to $stderr at circular
+	  require.
+
+	* vm_backtrace.c (rb_backtrace_print_to): new function to print
+	  backtrace to the given output.
+
 Tue Oct  8 21:03:35 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* vm_backtrace.c, include/ruby/debug.h: add new APIs
